refactor: chỉnh sửa và sửa lỗi  trang ngày lễ 20-10

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "**/*.tsx",
     "./types",
     "pages/test/pages.tsx",
-    "pages/middleware.ts"
+    "pages/middleware.ts",
+    "services/controller/script.js"
   ],
   "exclude": ["node_modules"]
 }
