--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Internship Project",
   "main": "index.js",
-  "repository": "https://github.com/minhhaufpt/Solana-BlockChain-SDK-AI.git",
+  "repository": "https://github.com/mhaucoder/Solana-BlockChain-SDK-AI.git",
   "author": "Nguyễn Minh Hậu",
   "license": "MIT",
   "scripts": {
@@ -58,6 +58,7 @@
     "react-easy-emoji": "^1.8.1",
     "react-headroom": "^3.1.1",
     "react-lottie": "^1.2.3",
+    "react-native": "^0.73.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "^2.1.3",
     "react-snowfall": "^1.2.1",
